# easy-mcp-server

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
docs/: Makefile  make.bat
docs/source/: api.rst  conf.py  development.rst  index.rst  installation.rst  usage.rst
docs/source/_static/css/: custom.css
easy_mcp_server/: __init__.py  cli.py  server.py  settings.py
scripts/: build.py
