[project]
name = "easy-mcp-server"
version = "0.1.0"
description = "A simple MCP server with stdio or SSE transport"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "mcp"
]